deploy: 0c5872d7d2878011077b8dfe7bcc5ecd5aa9eae4

--- a/404.html
+++ b/404.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="about.html"><strong aria-hidden="true">1.</strong> About</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="about.html">About</a></li><li class="chapter-item expanded "><a href="windows.html"><strong aria-hidden="true">1.</strong> Windows</a></li><li class="chapter-item expanded "><a href="macos.html"><strong aria-hidden="true">2.</strong> Mac OS</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
