--- a/print.html
+++ b/print.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="about.html"><strong aria-hidden="true">1.</strong> About</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="about.html">About</a></li><li class="chapter-item expanded "><a href="windows.html"><strong aria-hidden="true">1.</strong> Windows</a></li><li class="chapter-item expanded "><a href="macos.html"><strong aria-hidden="true">2.</strong> Mac OS</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -146,6 +146,93 @@
                     <main>
                         <h2 id="about"><a class="header" href="#about">About</a></h2>
 <p>Here is about part</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="Для-windows"><a class="header" href="#Для-windows">Для Windows</a></h1>
+<p>Пользователям Windows нужно установить и освоить следующие инструменты.</p>
+<p>Установить:</p>
+<ol>
+<li>git bash</li>
+<li>wsl 1/2</li>
+<li>ubuntu for wsl</li>
+<li>docker for windows</li>
+<li>notepad++</li>
+<li>vscode</li>
+</ol>
+<p>Освоить:</p>
+<ol>
+<li>git bash (юниксоподобный терминал под windows)</li>
+<li>unix user terminal commands (man, which, ls, cat, mcedit, mkdir, rm -r, chmod, chown, .sh, bash, sh)</li>
+<li>unix root terminal commands (apt, sudo, adduser, ..)</li>
+<li>WSL 1/2</li>
+<li>ssh/scp (ssh-keygen, known_hosts, config, login, logout, ssh -L, agent-forwarding)</li>
+<li>необрываемый &quot;терминал&quot; tmux</li>
+<li>jupyter notebook (--ip, --port, --no-browser, token)</li>
+<li>git (clone, status, --global, add, commit -m, push -u origin master, pull, checkout -b, rm --cached, .gitignore)</li>
+<li>docker commands</li>
+<li>notepad++ (LR,CF+LR)</li>
+<li>vscode</li>
+</ol>
+<h2 id="Установка"><a class="header" href="#Установка">Установка</a></h2>
+<h3 id="git-bash"><a class="header" href="#git-bash">git bash</a></h3>
+<ol>
+<li></li>
+</ol>
+<h3 id="wsl-12"><a class="header" href="#wsl-12">wsl 1/2</a></h3>
+<ol>
+<li></li>
+</ol>
+<h3 id="ubuntu-под-wsl-12"><a class="header" href="#ubuntu-под-wsl-12">ubuntu под wsl 1/2</a></h3>
+<ol>
+<li></li>
+</ol>
+<h3 id="docker-под-windows"><a class="header" href="#docker-под-windows">docker под windows</a></h3>
+<ol>
+<li></li>
+</ol>
+<h3 id="notepad"><a class="header" href="#notepad">notepad++</a></h3>
+<ol>
+<li></li>
+</ol>
+<h3 id="vscode"><a class="header" href="#vscode">vscode</a></h3>
+<ol>
+<li></li>
+</ol>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="Для-mac-os"><a class="header" href="#Для-mac-os">Для Mac Os</a></h1>
+<p>Пользователям Mac Os X нужно установить и освоить следующие инструменты.</p>
+<p>Установить:</p>
+<ol>
+<li>homebrew</li>
+<li>git</li>
+<li>docker for macosx</li>
+<li>vscode</li>
+</ol>
+<p>Освоить:</p>
+<ol>
+<li>unix user terminal commands (man, which, ls, cat, mcedit, mkdir, rm -r, chmod, chown, .sh, bash, sh)</li>
+<li>unix root terminal commands (apt, sudo, adduser, ..)</li>
+<li>ssh (ssh-keygen, known_hosts, config, login, logout, ssh -L, agent-forwarding)</li>
+<li>&quot;необрываемый терминал&quot; tmux</li>
+<li>jupyter notebook (--ip, --port, --no-browser, token, !)</li>
+<li>git (clone, status, --global, add, commit -m, push -u origin master, pull, checkout -b, rm --cached, .gitignore)</li>
+<li>docker commands</li>
+<li>vscode</li>
+</ol>
+<h2 id="Установка-1"><a class="header" href="#Установка-1">Установка</a></h2>
+<h3 id="homebrew"><a class="header" href="#homebrew">homebrew</a></h3>
+<ol>
+<li></li>
+</ol>
+<h3 id="git"><a class="header" href="#git">git</a></h3>
+<ol>
+<li></li>
+</ol>
+<h3 id="docker-for-macosx"><a class="header" href="#docker-for-macosx">docker for macosx</a></h3>
+<ol>
+<li></li>
+</ol>
+<h3 id="vscode-1"><a class="header" href="#vscode-1">vscode</a></h3>
+<ol>
+<li></li>
+</ol>
 
                     </main>
 
