deploy: 0582f1759e1d11e39fcc807b24738e74aa9fbbce

--- a/about.html
+++ b/about.html
@@ -145,6 +145,7 @@
                     <main>
                         <h2 id="about"><a class="header" href="#about">About</a></h2>
 <p>Here is about part</p>
+<p>$\int\limits_0^{+\infty}e^{-x}dx=1$</p>
 
                     </main>
 
