--- a/print.html
+++ b/print.html
@@ -146,6 +146,7 @@
                     <main>
                         <h2 id="about"><a class="header" href="#about">About</a></h2>
 <p>Here is about part</p>
+<p>$\int\limits_0^{+\infty}e^{-x}dx=1$</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="Для-windows"><a class="header" href="#Для-windows">Для Windows</a></h1>
 <p>Пользователям Windows нужно установить и освоить следующие инструменты.</p>
 <p>Установить:</p>
