--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                     <main>
                         <h2 id="about"><a class="header" href="#about">About</a></h2>
 <p>Here is about part</p>
+<p>$\int\limits_0^{+\infty}e^{-x}dx=1$</p>
 
                     </main>
 
